# agv-motion-mcu-firmware

./: .clangd  .gitignore  CMakeLists.txt  STM32G474RE_AGV.code-workspace  STM32L152DISCOVERY_AGV.code-workspace
app/: app_entry.cpp  app_entry.hpp
core/: CMakeLists.txt
core/api/: button_api.cpp  button_api.hpp  comm_api_ai.cpp  comm_api_ai.hpp  comm_uart_api.cpp  comm_uart_api.hpp  encoder_api.cpp  encoder_api.hpp  imu_api.cpp  imu_api.hpp  led_api.cpp  led_api.hpp  middleware_api_ai.cpp  middleware_api_ai.hpp  motor_api.cpp  motor_api.hpp  obstacle_api.cpp  obstacle_api.hpp  voltage_monitor_api.cpp  voltage_monitor_api.hpp
core/control/: RC_arc_controller_ai.hpp  RC_encoder_sample_guard_ai.hpp  RC_test_all_motors_step_ai.hpp  RC_test_comm_middleware_ai.hpp  RC_test_motor0_cycle_ai.hpp  controller_esp32_wroom32_demo.cpp  controller_esp32_wroom32_demo.hpp  controller_robot_future.cpp  controller_robot_future.hpp  implementation_rules.md  robot_control.cpp  robot_control.hpp  robot_control_ai.cpp  robot_control_ai.hpp
core/control/collision_prediction/: collision_prediction_logic.cpp  collision_prediction_logic.hpp  collision_prediction_pipeline.cpp  collision_prediction_pipeline.hpp  collision_tuning.hpp  logic.md
core/control/collision_prediction/internal/: collision_input_builder.cpp  collision_input_builder.hpp  obstacle_sensor_logic.cpp  obstacle_sensor_logic.hpp  vehicle_motion_estimator.cpp  vehicle_motion_estimator.hpp
core/control/drive_control/: drive_control_pipeline.cpp  drive_control_pipeline.hpp  wheel_drive_controller.cpp  wheel_drive_controller.hpp  wheel_drive_controller_tuning.hpp
core/control/heartbeat/: heartbeat_pipeline.cpp  heartbeat_pipeline.hpp
core/control/imu_calibration/: imu_calibration_drive_and_sample_alignment.cpp  imu_calibration_drive_and_sample_alignment.hpp  imu_calibration_pipeline.cpp  imu_calibration_pipeline.hpp  imu_calibration_solve_and_set.cpp  imu_calibration_solve_and_set.hpp  imu_calibration_stop_and_sample_tare.cpp  imu_calibration_stop_and_sample_tare.hpp  imu_calibration_tuning.hpp
core/control/local_positioning/: encoder_model_pipeline.cpp  encoder_model_pipeline.hpp  local_positioning.cpp  local_positioning.hpp  local_positioning_pipeline.cpp  local_positioning_pipeline.hpp  local_positioning_tuning.hpp
core/control/local_positioning/encoder_model/: confidence_estimation_encoders.cpp  confidence_estimation_encoders.hpp  delta_estimation_encoders.cpp  delta_estimation_encoders.hpp  encoder_model_pipeline.cpp  encoder_model_pipeline.hpp  encoder_model_tuning.hpp  input_storage_encoders.cpp  input_storage_encoders.hpp  motion_model_encoders.cpp  motion_model_encoders.hpp  stationary_detection_encoders.cpp  stationary_detection_encoders.hpp
core/control/local_positioning/imu_model/: delta_estimation_imu.cpp  delta_estimation_imu.hpp  imu_model_pipeline.cpp  imu_model_pipeline.hpp  imu_model_tuning.hpp  input_storage_imu.cpp  input_storage_imu.hpp  motion_model_imu.cpp  motion_model_imu.hpp  stationary_detection_imu.cpp  stationary_detection_imu.hpp
core/control/local_positioning/sensorfusion/: sensorfusion_pipeline.cpp  sensorfusion_pipeline.hpp  sensorfusion_tuning.hpp
core/control/motion_primitives/: motion_primitive_drive_forward.cpp  motion_primitive_drive_forward.hpp  motion_primitive_pause.cpp  motion_primitive_pause.hpp  motion_primitive_rotate_delta.cpp  motion_primitive_rotate_delta.hpp  motion_primitives.cpp  motion_primitives.hpp  motion_primitives_common.cpp  motion_primitives_common.hpp  motion_primitives_pipeline.cpp  motion_primitives_pipeline.hpp  motion_primitives_tuning.hpp
core/control/safe_guard/: safe_guard_pipeline.cpp  safe_guard_pipeline.hpp  safe_guard_tuning.hpp
core/impl/: button_gpio_impl.cpp  button_gpio_impl.hpp  comm_uart_impl.cpp  comm_uart_impl.hpp  comm_uart_impl_ai.cpp  comm_uart_impl_ai.hpp  encoder_as5600_pwm_impl.cpp  encoder_as5600_pwm_impl.hpp  imu_lsm9ds1_impl.cpp  imu_lsm9ds1_impl.hpp  led_gpio_impl.cpp  led_gpio_impl.hpp  middleware_impl_ai.cpp  middleware_impl_ai.hpp  motor_drv8871_impl.cpp  motor_drv8871_impl.hpp  obstacle_hcsr04_impl.cpp  obstacle_hcsr04_impl.hpp  voltage_monitor_adc_impl.cpp  voltage_monitor_adc_impl.hpp
core/mechanical_config/: mechanical_config.hpp
core/middleware/: incoming_middleware_pipeline.cpp  middleware_design.md  middleware_routes.hpp  middleware_runtime.cpp  middleware_runtime.hpp  middleware_shared_state.cpp  middleware_shared_state.hpp  middleware_state.hpp  middleware_streams.hpp  outgoing_middleware_pipeline.cpp  payload_helper_functions.hpp  stm_esp_middleware_pipeline.cpp  stm_esp_middleware_pipeline.hpp  stm_esp_middleware_streams.hpp
core/middleware/incoming_payloads/: clear_imu_calibration_payload.cpp  clear_imu_calibration_payload.hpp  debug_stream_control_payload.cpp  debug_stream_control_payload.hpp  incoming_middleware_pipeline.cpp  incoming_middleware_pipeline.hpp  incoming_payload_definition.hpp  lock_safe_guard_payload.cpp  lock_safe_guard_payload.hpp  motion_command_payload.cpp  motion_command_payload.hpp  obstacle_safety_control_payload.cpp  obstacle_safety_control_payload.hpp  start_imu_calibration_payload.cpp  trailer_status_payload.cpp  trailer_status_payload.hpp  unlock_safe_guard_payload.cpp
core/middleware/outgoing_payloads/: encoder_debug_payload.cpp  encoder_debug_payload.hpp  imu_debug_payload.cpp  imu_debug_payload.hpp  local_position_payload.cpp  obstacle_debug_payload.cpp  obstacle_debug_payload.hpp  outgoing_middleware_pipeline.cpp  outgoing_middleware_pipeline.hpp  outgoing_payload_definition.hpp  power_status_payload.cpp  safety_status_payload.cpp  voltage_debug_payload.cpp  voltage_debug_payload.hpp
core/middleware/stm_esp/: binary_packing.hpp  stm_esp_middleware_state.hpp
core/state/: agv_state.cpp  agv_state.hpp
core/system_select/: button_system_select.cpp  comm_uart_system_select.cpp  encoder_system_select.cpp  imu_system_select.cpp  led_system_select.cpp  motor_system_select.cpp  obstacle_system_select.cpp  system_select.cpp  system_select.hpp  voltage_monitor_system_select.cpp
(+207 files in other folders)
